--- a/jenkins-plugin-model/src/Pi.Web/Pi.Web.csproj
+++ b/jenkins-plugin-model/src/Pi.Web/Pi.Web.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PowerArgs" Version="3.6.0" />
-    <PackageReference Include="prometheus-net" Version="3.4.0" />
-    <PackageReference Include="prometheus-net.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="PowerArgs" Version="4.0.0" />
+    <PackageReference Include="prometheus-net" Version="7.1.0" />
+    <PackageReference Include="prometheus-net.AspNetCore" Version="7.1.0" />
   </ItemGroup>
 
   <ItemGroup>
